--- a/.github/workflows/publish_all.yml
+++ b/.github/workflows/publish_all.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Publish All Versions
 on: [workflow_dispatch] # Manual trigger
 
 permissions:
@@ -15,7 +15,7 @@ jobs:
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
       - name: Publish mods
-        run: ./gradlew build publishMods
+        run: ./gradlew build chiseledPublishAll
         env:
           CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
           MODRINTH_API_KEY: ${{ secrets.MODRINTH_API_KEY }}
