--- a/.github/workflows/publish_specific.yml
+++ b/.github/workflows/publish_specific.yml
@@ -15,7 +15,7 @@ jobs:
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
       - name: Publish mods
-        run: ./gradlew build chiseledPublishSpecified
+        run: ./gradlew chiseledBuildAndCollectAll chiseledPublishSpecified
         env:
           CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
           MODRINTH_API_KEY: ${{ secrets.MODRINTH_API_KEY }}
