--- a/gradle.properties
+++ b/gradle.properties
@@ -49,8 +49,8 @@ version_type = RELEASE
 test_publish = false
 
 # Project IDs
-modrinth_id = 44woVQ8H
-curseforge_id = 923086
+modrinth_id = KyxONZZh
+curseforge_id = none
 
 # CurseForge Settings
 is_for_client = true
