--- a/.github/workflows/publish_all.yml
+++ b/.github/workflows/publish_all.yml
@@ -15,7 +15,7 @@ jobs:
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
       - name: Publish mods
-        run: ./gradlew build chiseledPublishAll
+        run: ./gradlew chiseledBuildAndCollectAll chiseledPublishAll
         env:
           CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
           MODRINTH_API_KEY: ${{ secrets.MODRINTH_API_KEY }}
