--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ mod_license = GPL-2.0
 lombok_version = 1.18.32
 
 # Multi-Versions Properties
-# Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21
+# Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
 multi_versions = 1.20.1 1.21
 
 # Build Dependencies
@@ -50,7 +50,7 @@ test_publish = false
 
 # Project IDs
 modrinth_id = KyxONZZh
-curseforge_id = none
+curseforge_id = 1130013
 
 # CurseForge Settings
 is_for_client = true
