Removed j52j (😔), fixed bugs, updated some features

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ multi_versions = 1.20.1 1.21
 
 # Build Dependencies
 build.yarn = [VERSIONED]
-build.fabric_loader = 0.15.11
+build.fabric_loader = 0.16.7
 build.fabric_api = [VERSIONED]
 build.java = [VERSIONED]
 
@@ -41,7 +41,7 @@ dep.modmenu = [VERSIONED]
 # Mod Loaders
 loaders = fabric
 # Publication Versions from `ROOT/libs/mod-version-here.jar` or from `ROOT/versions/MC_VERSION/build/libs/...` if not present in root
-publication_versions = 1.20.1[1.20.2] 1.21
+publication_versions = 1.20.1[1.20.2] 1.21[2]
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
