--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
 	id("fabric-loom") version "1.8-SNAPSHOT"
-	id("dev.kikugie.j52j") version "1.0.2"
 	id("me.modmuss50.mod-publish-plugin") version "0.7.4"
 }
 
@@ -24,10 +23,6 @@ println "[${mcVersion}] Using Java: ${javaVersion.toString()}"
 
 version = "${modVersion}+${currentMultiVersion.projectVersion}"
 group = modMavenGroup
-
-j52j {
-	sources(sourceSets["main"])
-}
 
 base {
 	archivesName = modName
@@ -88,7 +83,7 @@ loom {
 
 	def personalProperties = getPersonalProperties()
 	def pathToSpongeMixin = personalProperties.get("absolute_path_to_sponge_mixin")
-	def quickPlay = getNickname(personalProperties.get("quick_play"))
+	def quickPlay = personalProperties.get("quick_play")
 	def playerNickname = getNickname(personalProperties.get("player_nickname"))
 	def playerUuid = getUUID(personalProperties.get("player_uuid"))
 
@@ -96,14 +91,11 @@ loom {
 		config.setIdeConfigGenerated(true) // generate IDE tasks for running client, server and testmod, datagen if those are present
 		config.setRunDir("../../runs/${config.environment}") // use different run directory for all environments
 
-		if (config.getEnvironment() == "client") { // setting player properties from "./players/personal.properties" file
-			if (playerNickname != null && pathToSpongeMixin.toString() != "none") {
+		if (config.getEnvironment() == "client") { // setting player properties from "./personal/personal.properties" file
+			if (playerNickname != null && playerNickname.toString() != "none") {
 				config.programArgs("--username", playerNickname.toString())
 			}
-			if (playerUuid != null && pathToSpongeMixin.toString() != "none") {
-				config.programArgs("--uuid", playerUuid.toString())
-			}
-			if (playerUuid != null && pathToSpongeMixin.toString() != "none") {
+			if (playerUuid != null && playerUuid.toString() != "none") {
 				config.programArgs("--uuid", playerUuid.toString())
 			}
 			if (quickPlay != null && quickPlay.toString() != "none") {
@@ -135,14 +127,22 @@ processResources {
 		inputs.property key, value
 	}
 
-
-	filesMatching(["fabric.mod.json", "${modId}.mixins.json5".toString(), "assets/${modId}/lang/*.json".toString()]) {
+	filesMatching(["fabric.mod.json", "assets/${modId}/lang/*.json".toString()]) {
 		expand(props)
 	}
 
 	filesMatching("aws/*.accesswidener") {
 		if (!it.getName().startsWith(mcVersion)) {
 			it.exclude()
+		}
+	}
+
+	filesMatching("mixins/*.mixins.json") {
+		def name = substringBefore(it.getName(), "-")
+		if (name != mcVersion) {
+			it.exclude()
+		} else {
+			expand(props)
 		}
 	}
 }
@@ -160,7 +160,7 @@ tasks.withType(JavaCompile).configureEach {
 tasks.register('generatePublishWorkflowsForEachVersion') {
 	group = 'project'
 	doFirst {
-		def workflowsFolder = project.rootProject.file(".github/workflows/")
+		def workflowsFolder = project.rootProject.file(".github/workflows/generated/")
 		if (!workflowsFolder.exists() && !workflowsFolder.mkdirs()) {
 			return
 		}
@@ -410,7 +410,7 @@ UUID getUUID(Object uuid) {
 int getJavaVersionAsInteger(String minecraftVersion) {
 	return stonecutter.compare("1.20.5", minecraftVersion) == 1 ?
 			stonecutter.compare("1.18", minecraftVersion) == 1 ?
-					stonecutter.compare("1.17", minecraftVersion) == 1 ?
+					stonecutter.compare("1.16.5", minecraftVersion) == 1 ?
 							8
 							:
 							16
@@ -452,10 +452,19 @@ MultiVersion getCurrentMultiVersion(String minecraftVersion) {
 			if (supportedVersionsString.contains("-")) {
 				def supportedVersions = supportedVersionsString.split("-")
 				return new MultiVersion(projectVersion: minecraftVersion, minVersion: supportedVersions[0], maxVersion: supportedVersions[1])
+			} else if (supportedVersionsString.contains(".")) {
+				return new MultiVersion(projectVersion: minecraftVersion, minVersion: minecraftVersion, maxVersion: supportedVersionsString)
+			} else {
+				def a = project.indexOf(".")
+				def i = project.lastIndexOf(".")
+				if (a == i) {
+					i = project.length()
+				}
+				def p = project.substring(0, i)
+				def supportedMaxVersion = "${p}.${supportedVersionsString}"
+				return new MultiVersion(projectVersion: minecraftVersion, minVersion: minecraftVersion, maxVersion: supportedMaxVersion)
 			}
-			return new MultiVersion(projectVersion: minecraftVersion, minVersion: minecraftVersion, maxVersion: supportedVersionsString)
 		}
-
 	}
 	return new MultiVersion(projectVersion: minecraftVersion, minVersion: minecraftVersion, maxVersion: minecraftVersion)
 }
@@ -473,10 +482,27 @@ class MultiVersion {
 	}
 
 	String toVersionRange() {
-		if (minVersion != maxVersion) {
-			return "${minVersion}-${maxVersion}"
+		if (minVersion == maxVersion) {
+			return maxVersion
 		}
-		return maxVersion
+		def aMin = minVersion.indexOf(".")
+		def bMin = minVersion.lastIndexOf(".")
+		if (aMin == bMin) {
+			bMin = minVersion.length()
+		}
+		def minMain = minVersion.substring(0, bMin)
+
+		def aMax = maxVersion.indexOf(".")
+		def bMax = maxVersion.lastIndexOf(".")
+		if (aMax == bMax) {
+			bMax = maxVersion.length()
+		}
+		def maxMain = maxVersion.substring(0, bMax)
+		def maxMinor = maxVersion.substring(bMax+1, maxVersion.length())
+		if (minMain == maxMain) {
+			return "${minVersion}-${maxMinor}"
+		}
+		return "${minVersion}-${maxVersion}"
 	}
 }
 
@@ -492,7 +518,7 @@ def getVerifiedOrDefaultJar(String modName, String modVersion, String minecraftV
 }
 
 String getChangeLog() {
-	def file = project.rootProject.file("publish/CHANGELOG.md")
+	def file = project.rootProject.file("CHANGELOG.md")
 	if (file.exists()) {
 		def text = file.getText()
 		if (!text.isBlank()) {
