Jus fixed gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ mod_version = 1.0.0
 mod_group = net.lopymine.mossy
 mod_maven_group = net.lopymine
 
-mod_description = Template Fabric mod with some additional tweaks and templates for my projects
+mod_description = Template Fabric mod with some additional tweaks and templates for Mossy projects
 mod_authors = LopyMine
-mod_license = GPL-2.0
+mod_license = GPL-3.0
 
 # Main Dependencies
 lombok_version = 1.18.32
@@ -58,7 +58,7 @@ is_for_server = false
 max_java_version = 21
 
 # Mod Depends
-requires_depends = none
+requires_depends = fabric-api
 optional_depends = modmenu yacl
 incompatible_depends = none
 embeds_depends = none
