--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
+import net.lopymine.mossy.MossyPlugin
+
 plugins {
-	id("fabric-loom") version "1.8-SNAPSHOT"
-	id("me.modmuss50.mod-publish-plugin") version "0.7.4"
+	id("net.lopymine.mossy-plugin")
 }
 
 def modId = prop("mod_id")
@@ -46,14 +47,22 @@ repositories {
 	// For Mod Menu, because at 1.20.4 it needs PlaceHolder API, see https://github.com/TerraformersMC/ModMenu/issues/752
 }
 
+//mossyDependencies {
+//	minecraft = "1.21"
+////	mappings = "blabla"
+////	lombok = "1.28.33"
+////	fabric_api = "1.21"
+////	mod_menu = "12312.55"
+//}
+
 dependencies {
 	minecraft "com.mojang:minecraft:${mcVersion}"
 	mappings "net.fabricmc:yarn:${prop("build.yarn")}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${prop("build.fabric_loader")}"
+	modImplementation "net.fabricmc:yarn:${prop("build.yarn")}:v2"
 
-	// Lombok
-	compileOnly "org.projectlombok:lombok:${lombokVersion}"
-	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+//	// Lombok
+//	compileOnly "org.projectlombok:lombok:${lombokVersion}"
+//	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
 	// Fabric API
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${prop("build.fabric_api")}"
@@ -71,43 +80,6 @@ dependencies {
 	}
 }
 
-loom {
-	mixin {
-		defaultRefmapName.set("${modId}.refmap.json")
-	}
-
-	def accessWidenerFile = project.rootProject.file("src/main/resources/aws/${mcVersion}.accesswidener")
-	if (accessWidenerFile.exists()) {
-		accessWidenerPath = accessWidenerFile
-	}
-
-	def personalProperties = getPersonalProperties()
-	def pathToSpongeMixin = personalProperties.get("absolute_path_to_sponge_mixin")
-	def quickPlay = personalProperties.get("quick_play")
-	def playerNickname = getNickname(personalProperties.get("player_nickname"))
-	def playerUuid = getUUID(personalProperties.get("player_uuid"))
-
-	runConfigs.configureEach { config ->
-		config.setIdeConfigGenerated(true) // generate IDE tasks for running client, server and testmod, datagen if those are present
-		config.setRunDir("../../runs/${config.environment}") // use different run directory for all environments
-
-		if (config.getEnvironment() == "client") { // setting player properties from "./personal/personal.properties" file
-			if (playerNickname != null && playerNickname.toString() != "none") {
-				config.programArgs("--username", playerNickname.toString())
-			}
-			if (playerUuid != null && playerUuid.toString() != "none") {
-				config.programArgs("--uuid", playerUuid.toString())
-			}
-			if (quickPlay != null && quickPlay.toString() != "none") {
-				config.programArgs("--quickPlaySingleplayer", quickPlay.toString())
-			}
-			if (pathToSpongeMixin != null && pathToSpongeMixin.toString() != "none") {
-				config.vmArg("-javaagent:${pathToSpongeMixin.toString()}")
-			}
-		}
-	}
-}
-
 processResources {
 	def props = [:]
 	props.put("mod_id", modId.toString())
@@ -120,14 +92,13 @@ processResources {
 	props.put("fabric_loader", prop("build.fabric_loader").toString())
 	props.put("minecraft", mcVersion.toString())
 	props.put("java", javaVersionAsInt.toString())
-//	props.put("fabric_api", substringBefore(prop("build.fabric_api").toString(), "+"))
 	props.put("fabric_api_id", stonecutter.compare("1.19.1", mcVersion) >= 0 ? "fabric" : "fabric-api")
 
 	props.each { key, value ->
 		inputs.property key, value
 	}
 
-	filesMatching(["fabric.mod.json", "assets/${modId}/lang/*.json".toString()]) {
+	filesMatching(["*.json", "*.json5", "assets/${modId}/lang/*.json".toString()]) {
 		expand(props)
 	}
 
@@ -155,101 +126,6 @@ stonecutter {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = (javaVersionAsInt as int)
-}
-
-tasks.register('generatePublishWorkflowsForEachVersion') {
-	group = 'project'
-	doFirst {
-		def workflowsFolder = project.rootProject.file(".github/workflows/generated/")
-		if (!workflowsFolder.exists() && !workflowsFolder.mkdirs()) {
-			return
-		}
-		def versions = prop("multi_versions").split(" ")
-		versions.each { version ->
-			def publishVersionWorkflow = workflowsFolder.toPath().resolve("publish_${version.toString()}.yml").toFile()
-			if (!publishVersionWorkflow.exists()) {
-				publishVersionWorkflow.createNewFile()
-				publishVersionWorkflow.text =
-					"""
-					# Generated workflow by task
-
-					name: Publish ${version.toString()} Version
-					on: [workflow_dispatch] # Manual trigger
-					
-					permissions:
-					  contents: write
-					
-					jobs:
-					  build:
-					    runs-on: ubuntu-22.04
-					    container:
-					      image: mcr.microsoft.com/openjdk/jdk:21-ubuntu
-					      options: --user root
-					    steps:
-					      - uses: actions/checkout@v4
-					      - name: make gradle wrapper executable
-					        run: chmod +x ./gradlew
-					      - name: Publish ${version.toString()} Mod Version
-					        run: ./gradlew chiseledBuildAndCollect+${version.toString()} chiseledPublish+${version.toString()}
-					        env:
-					          CURSEFORGE_API_KEY: \${{ secrets.CURSEFORGE_API_KEY }}
-					          MODRINTH_API_KEY: \${{ secrets.MODRINTH_API_KEY }}
-					""".stripIndent().strip()
-			}
-		}
-	}
-}
-
-tasks.register('generatePersonalProperties') {
-	group = 'project'
-
-	doFirst {
-		def folder = project.rootProject.file("personal/")
-		if (folder.exists() || folder.mkdirs()) {
-			def props = project.rootProject.file("personal/personal.properties")
-			props.createNewFile()
-			props.text =
-					"""
-					# # # # # # # # # # # # # #
-					#   Personal Properties   #
-					# # # # # # # # # # # # # #
-					
-					# If you don't want to set up any property, just set it to "none".
-					# Remember to run "regenerateRunConfigurations" task after changing this file!
-					
-					# Player properties
-					player_nickname=Steve
-					player_uuid=8667ba71-b85a-4004-af54-457a9734eed7
-					
-					# Hot Swapping
-					absolute_path_to_sponge_mixin=none
-					
-					# Quick Play
-					world_name=none
-					""".stripIndent().strip()
-		}
-	}
-}
-
-tasks.register('regenerateRunConfigurations', Delete) {
-	group = 'project'
-	delete(project.rootProject.file(".idea/runConfigurations"))
-	finalizedBy("ideaSyncTask")
-}
-
-tasks.register('buildAndCollect', Copy) {
-	group = 'build'
-	from(tasks.remapJar.archiveFile)
-	into(project.rootProject.file("libs/"))
-	dependsOn('rebuildLibs')
-}
-
-tasks.register('rebuildLibs', Delete) {
-	group = 'build'
-	delete(project.rootProject.file("libs/${modName}-${version}.jar"))
-	delete(project.file("libs/${modName}-${version}.jar"))
-	delete(project.file("libs/${modName}-${version}-sources.jar"))
-	finalizedBy("build")
 }
 
 java {
