--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 #    Gradle Properties    #
 # # # # # # # # # # # # # #
 
+current_mossy_build_version = 1.0.0
+
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx5G
 org.gradle.parallel=true
