--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -1,3 +1,15 @@
 # Gradle Plugin properties
 
+# Plugin Properties
+plugin_id = mossy-plugin
+plugin_maven_package = net.lopymine
+plugin_package = net.lopymine.mossy
+plugin_class = MossyPlugin
+
+plugin_version = 1.0.0
+
+# Dependencies
 lombok_version = 1.18.32
+mod_publish_plugin_version = 0.7.4
+stonecutter_version = 0.4.4
+fabric_loom_version = 1.8-SNAPSHOT
