Moved Stonecutter, Java, MultiVersion system and etc to BuildSrc

--- a/gradle.properties
+++ b/gradle.properties
@@ -60,7 +60,7 @@ is_for_server = false
 max_java_version = 21
 
 # Mod Depends
-requires_depends = fabric-api
-optional_depends = modmenu yacl
-incompatible_depends = none
-embeds_depends = none
+depends_requires = fabric-api
+depends_optional = modmenu yacl
+depends_incompatible = none
+depends_embeds  = none
