--- a/gradle.properties
+++ b/gradle.properties
@@ -9,18 +9,18 @@ org.gradle.jvmargs=-Xmx5G
 org.gradle.parallel=true
 
 # Mod Properties
-mod_id = mossy
-mod_name = Mossy
-mod_version = 1.0.0
-mod_group = net.lopymine.mossy
-mod_maven_group = net.lopymine
+data.mod_id = mossy
+data.mod_name = Mossy
+data.mod_version = 1.0.0
+data.mod_group = net.lopymine.mossy
+data.mod_maven_group = net.lopymine
 
-mod_description = Template Fabric mod with some additional tweaks and templates for Mossy projects
-mod_authors = LopyMine
-mod_license = GPL-3.0
+data.mod_description = Template Fabric mod with some additional tweaks and templates for Mossy projects
+data.mod_authors = LopyMine
+data.mod_license = GPL-3.0
 
 # Main Dependencies
-lombok_version = 1.18.32
+base.lombok_version = 1.18.32
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
