--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -1,7 +1,8 @@
 # Gradle Plugin properties
 
 # Plugin Properties
-plugin_id = mossy-plugin
+main_module_id = mossy-plugin
+stonecutter_module_id = mossy-plugin-stonecutter
 plugin_maven_package = net.lopymine
 plugin_package = net.lopymine.mossy
 plugin_class = MossyPlugin
