--- a/.github/workflows/publish_1.21.yml
+++ b/.github/workflows/publish_1.21.yml
@@ -1,6 +1,6 @@
 # Generated workflow by task
 
-name: Publish 1.20.1 Version
+name: Publish 1.21 Version
 on: [workflow_dispatch] # Manual trigger
 
 permissions:
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
-      - name: Publish 1.20.1 Mod Version
-        run: ./gradlew chiseledBuildAndCollect+1.20.1 chiseledPublish+1.20.1
+      - name: Publish 1.21 Mod Version
+        run: ./gradlew chiseledBuildAndCollect+1.21 chiseledPublish+1.21
         env:
-          CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
-          MODRINTH_API_KEY: ${{ secrets.MODRINTH_API_KEY }}
+          CURSEFORGE_API_KEY: {{ secrets.CURSEFORGE_API_KEY }}
+          MODRINTH_API_KEY: {{ secrets.MODRINTH_API_KEY }}
