--- a/.github/workflows/publish_1.20.1.yml
+++ b/.github/workflows/publish_1.20.1.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Publish 1.20.1 Mod Version
         run: ./gradlew chiseledBuildAndCollect+1.20.1 chiseledPublish+1.20.1
         env:
-          CURSEFORGE_API_KEY: {{ secrets.CURSEFORGE_API_KEY }}
-          MODRINTH_API_KEY: {{ secrets.MODRINTH_API_KEY }}
+          CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
+          MODRINTH_API_KEY: ${{ secrets.MODRINTH_API_KEY }}
