--- a/.github/workflows/publish_1.21.yml
+++ b/.github/workflows/publish_1.21.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Publish 1.21 Mod Version
         run: ./gradlew chiseledBuildAndCollect+1.21 chiseledPublish+1.21
         env:
-          CURSEFORGE_API_KEY: {{ secrets.CURSEFORGE_API_KEY }}
-          MODRINTH_API_KEY: {{ secrets.MODRINTH_API_KEY }}
+          CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
+          MODRINTH_API_KEY: ${{ secrets.MODRINTH_API_KEY }}
