--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,9 @@ base.lombok_version = 1.18.32
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
-multi_versions = 1.20.1 1.21
+multi_loaders = loaderA loaderB
+loader.loaderA = 1.21
+loader.loaderB = 1.20.1
 
 # Build Dependencies
 build.yarn = [VERSIONED]
@@ -42,8 +44,6 @@ dep.modmenu = [VERSIONED]
 
 # Mod Loaders
 loaders = fabric
-# Publication Versions from `ROOT/libs/mod-version-here.jar` or from `ROOT/versions/MC_VERSION/build/libs/...` if not present in root
-publication_versions = 1.20.1[1.20.2] 1.21[2]
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
