--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ data.mod_maven_group = net.lopymine
 
 data.mod_description = Template Fabric mod with some additional tweaks and templates for Mossy projects
 data.mod_authors = LopyMine
-data.mod_license = GPL-3.0
+data.mod_license = LGPL-3.0-only
 
 # Main Dependencies
 base.lombok_version = 1.18.32
