--- a/gradle.properties
+++ b/gradle.properties
@@ -41,7 +41,7 @@ dep.modmenu = [VERSIONED]
 
 # Mod Loaders
 loaders = fabric
-# Publication Versions from `ROOT/libs/mod-version-here.jar` or from `ROOT/versions/MC_VERSION/build/libs/...` if not present in root
+# Publication Versions
 publication_versions = 1.20.1[1.20.2] 1.21[2]
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
