--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ current_mossy_build_version = 1.0.0
 
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx5G
-org.gradle.parallel=true
+org.gradle.parallel=false
 
 # Mod Properties
 data.mod_id = mossy
@@ -24,7 +24,7 @@ base.lombok_version = 1.18.32
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
-multi_versions = 1.20.1 1.21
+multi_versions = 1.20.1 1.21 1.21.1 1.21.2 1.21.3 1.21.4
 
 # Build Dependencies
 build.yarn = [VERSIONED]
