--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ pluginManagement {
 }
 
 plugins {
-	id "dev.kikugie.stonecutter" version "0.4.4"
+	id "dev.kikugie.stonecutter" version "0.7-alpha.10"
 }
 
 def multiVersions = getMultiVersions()
