Fixed workflows and added specified tasks

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ current_mossy_build_version = 1.0.0
 
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx5G
-org.gradle.parallel=false
+org.gradle.parallel=true
 
 # Mod Properties
 data.mod_id = mossy
@@ -42,7 +42,7 @@ dep.modmenu = [VERSIONED]
 # Mod Loaders
 loaders = fabric
 # Publication Versions
-publication_versions = 1.20.1[1.20.2] 1.21[2]
+versions_specifications = 1.20.1[1.20.2] 1.21[2]
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
