--- a/settings.gradle
+++ b/settings.gradle
@@ -259,12 +259,12 @@ File createAWFile(String version) {
 }
 
 File getOrCreateGradlePropertiesFile(String version) {
-	def folderFile = file("/versions/${version}")
+	def folderFile = file("versions/${version}")
 	if (!folderFile.exists() && !folderFile.mkdirs()) {
 		println("Failed to get or create folder for " + version)
 		return null
 	}
-	def gradlePropertiesFile = file("/versions/${version}/gradle.properties")
+	def gradlePropertiesFile = file("versions/${version}/gradle.properties")
 	if (!gradlePropertiesFile.exists() && !gradlePropertiesFile.createNewFile()) {
 		println("Failed to get or create gradle.properties for " + version)
 		return null
