--- a/gradle.properties
+++ b/gradle.properties
@@ -41,7 +41,7 @@ dep.modmenu = [VERSIONED]
 
 # Mod Loaders
 loaders = fabric
-# Publication Versions
+# Versions Specifications
 versions_specifications = 1.20.1[1.20.2] 1.21[2]
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
