Moved everything from settings.gradle to /buildSettings/, yapi

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,9 @@ current_mossy_build_version = 1.0.0
 org.gradle.jvmargs=-Xmx5G
 org.gradle.parallel=true
 
+# Stonecutter
+dev.kikugie.stonecutter.hard_mode=true
+
 # Mod Properties
 data.mod_id = mossy
 data.mod_name = Mossy
