--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ data.mod_maven_group = net.lopymine
 
 data.mod_description = Template Fabric mod with some additional tweaks and templates for Mossy projects
 data.mod_authors = LopyMine
-data.mod_license = LGPL-3.0-only
+data.mod_license = CC BY-ND 4.0
 
 # Main Dependencies
 base.lombok_version = 1.18.32
