--- a/gradle.properties
+++ b/gradle.properties
@@ -20,14 +20,14 @@ data.mod_maven_group = net.lopymine
 
 data.mod_description = Template Fabric mod with some additional tweaks and templates for Mossy projects
 data.mod_authors = LopyMine
-data.mod_license = CC BY-ND 4.0
+data.mod_license = CC-BY-ND 4.0
 
 # Main Dependencies
 base.lombok_version = 1.18.32
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
-multi_versions = 1.20.1 1.21 1.21.1 1.21.2 1.21.3 1.21.4
+multi_versions = 1.20.1 1.21 1.21.4 1.21.8 1.21.9
 
 # Build Dependencies
 build.yarn = [VERSIONED]
