--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id("net.lopymine.mossy-plugin")
+	id "net.lopymine.mossy-plugin-core" version "$mossy_plugin_version"
 }
 
 mossyDependencies {
@@ -10,23 +10,25 @@ mossyDependencies {
 	fabricLoader = prop("build.fabric_loader")
 
 	additional {
-	    // - By default, every additional project dependency ("dep.modId" from gradle.properties) will use
-	    // - Modrinth Maven and "modImplementation" configuration name
-	    // - If you want to override mod configuration name, you can do this:
-
-		override("modCompileOnly", "modmenu")
-
-		// - It will do this:
-		// - modImplementation("maven.modrinth:modId:version") -> modCompileOnly("maven.modrinth:modId:version")
-
-	    // - Or if you want to disable it and handle by yourself, just disable it auto handling:
-
+		//override("modCompileOnly", "modmenu")
 		//disable("just_mod_id")
 	}
 }
 
 mossyResources {
 	//expandFiles = ["custom", "file", "patterns", "here"]
+}
+
+repositories {
+	mavenLocal()
+	maven {
+		name "Mossy Projects"
+		url "https://maven.lopymine.net/releases"
+	}
+}
+
+dependencies {
+	include(modImplementation("net.lopymine:mossylib:${prop("build.mossylib")}-${stonecutter.current.project}"))
 }
 
 String prop(String key) {
