--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,12 @@
 #    Gradle Properties    #
 # # # # # # # # # # # # # #
 
-current_mossy_build_version = 1.0.0
-
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx16G
+org.gradle.jvmargs=-Xmx24G
 org.gradle.parallel=true
+
+# Mossy Plugin
+mossy_plugin_version = 1.1.5
 
 # Stonecutter
 dev.kikugie.stonecutter.hard_mode=true
@@ -23,16 +24,17 @@ data.mod_authors = LopyMine
 data.mod_license = CC-BY-ND 4.0
 
 # Main Dependencies
-base.lombok_version = 1.18.32
+base.lombok_version = 1.18.42
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21 1.21.1 1.21.2 1.21.3
-multi_versions = 1.20.1 1.21 1.21.4 1.21.8 1.21.9
+multi_versions = 1.20.1 1.21.1 1.21.4 1.21.8 1.21.10
 
 # Build Dependencies
 build.yarn = [VERSIONED]
 build.fabric_loader = 0.17.2
 build.fabric_api = [VERSIONED]
+build.mossylib = 1.0.1
 
 # Additional Dependencies, "dep." is important
 dep.yacl = [VERSIONED]
@@ -45,7 +47,7 @@ dep.modmenu = [VERSIONED]
 # Mod Loaders
 loaders = fabric
 # Versions Specifications
-versions_specifications = 1.20.1[1.20.2] 1.21[2]
+versions_specifications = 1.20.1 1.21.1 1.21.4 1.21.8 1.21.10
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
